--- a/ch2BE/.settings/org.eclipse.wst.common.component
+++ b/ch2BE/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Ch2_BE">
+    <wb-module deploy-name="ch2BE">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="ch_2_BE"/>
-        <property name="java-output-path" value="/Ch2_BE/build/classes"/>
+        <property name="context-root" value="ch2BE"/>
+        <property name="java-output-path" value="/ch2BE/build/classes"/>
     </wb-module>
 </project-modules>
